# debug-infra-gentests

./: .gitignore  .gitmodules  README.md  update-submodules.sh
Java/auto-debugger/: .gitignore  README.md  settings.gradle.kts
Java/auto-debugger/analyzer-common/: build.gradle.kts
Java/auto-debugger/analyzer-java/: build.gradle.kts
Java/auto-debugger/demo/: README.md  build.gradle.kts
Java/auto-debugger/docs/: defects4j-lang1b-findings.md
Java/auto-debugger/gradle/: libs.versions.toml
Java/auto-debugger/instrumentor-java/: build.gradle.kts
Java/auto-debugger/intellij-plugin/: build.gradle.kts
Java/auto-debugger/patches/disl/: 0001-fix-disl-use-e_opts-instead-of-s_opts-in-run_evaluat.patch  0002-build-add-aarch64-architecture-support.patch  0003-disl-agent-macos-arm64-linker-flags.patch  0004-shvm-agent-disable-pthread-macos.patch  README.md
Java/auto-debugger/runner/: build.gradle.kts
Java/auto-debugger/test-generator-java/: build.gradle.kts
Java/auto-debugger/test-runner-java/: build.gradle.kts
Java/auto-debugger/test-utils/: build.gradle.kts
LLVM/: README.md
LLVM/notes/: 02-mlir-notes.md  development-manual.md
LLVM/notes/misc/: clang-ir-index-mapping.diff
LLVM/podman/: Containerfile  Containerfile-dev  README.md
LLVM/report/: EVALUATION.md  REPORT.md
LLVM/report/findutils-materials/: README.md  argtrace-wrapper.sh.template  calltrace-wrapper.sh.template  e2e-nodiff-cli-run.sh  fnexit-argtrace-wrapper.sh.template  manual-flush.sh
LLVM/report/keepass-materials/: .gitignore  README.md  calltrace.diff.template  cli-calltrace.sh  cli-test.sh  e2e-cli.sh  gui-calltrace.sh  gui-capture-test.sh  make-diffs.sh  manual-flush.sh  selection-trace-fnexit.diff.template  selection-trace.diff.template
LLVM/report/keepass-materials/run-without-modifications/: argtrace-wrapper.sh.template  calltrace-wrapper.sh.template  e2e-nodiff-cli-run.sh
LLVM/report/yaga-materials/: README.md  e2e-nodiff-cli-run.sh  fnexit-argtrace-wrapper.sh.template  input.smt
LLVM/sandbox/: setup-llvm-build.sh
LLVM/sandbox/00-clang-ast/: first-step.cpp
LLVM/sandbox/00-clang-ast/inject-w-library/: .gitignore  README.md
LLVM/sandbox/01-llvm-ir/custom-metadata-pass/: clang-llvm-map.diff  cp-to-llvm-proj.sh  custom-metadata.diff  header.hpp  metadata-and-unsigned-attributes.diff  setup-tool.sh
LLVM/sandbox/01-llvm-ir/llvm-pass/: .gitignore
LLVM/sandbox/02-ipc/e2e-tests/: README.md  clean-all.sh
LLVM/sandbox/02-ipc/e2e-tests/testbin-c-example/: CMakeLists.txt
LLVM/sandbox/02-ipc/example-arg-replacement/: CMakeLists.txt  README.md  build-call-trace.sh  main.cpp
LLVM/sandbox/02-ipc/example-complex/: build-arg-trace.sh  lib2.cpp
LLVM/sandbox/02-ipc/ipc-finalizer/: .gitignore  CMakeLists.txt  build.sh
LLVM/sandbox/02-ipc/ipc-hooklib/: .clang-tidy  shm_commons.h  shm_oneshot_rx.c
notes/: 00-initial-analysis.md  00-paper-notes.md  00-progress-updates.md  00-testing-alternatives.md  000-TODOs.md  01-llvm-ir-metadata-emission.md  02-mlir-notes.md  0x-llvm-demangling.md  development-manual.md
podman/: Containerfile  README.md
report/: EVALUATION.md  REPORT.md
sandbox/: .gitignore  setup-llvm-build-cir.sh  setup-llvm-build.sh
sandbox/00-clang-ast/: .gitignore  README.md  build.sh  flake.nix  setup-llvm-build.sh  setup-tool.sh
sandbox/00-clang-ast/inject-w-library/: CMakeLists.txt  main.cpp
sandbox/00-clang-ast/instr-rapid-iter/: test-program.cpp
sandbox/00-clang-ast/instr-rapid-iter/working/: .gitignore  HOWTO.md  program-instr.sh  test-program.cpp
sandbox/01-llvm-ir/: README.md  clang-ir-mapping-llvm.diff
sandbox/01-llvm-ir/custom-metadata-pass/: .gitignore  README.md  headerimpl.cpp  setup-tool.sh  test-program.cpp
sandbox/01-llvm-ir/custom-metadata-pass/ast-meta-add/: AstMetaAdd.cpp  llvm-metadata.h
sandbox/01-llvm-ir/llvm-pass/: .clang-tidy  .clangd  CMakeLists.txt  README.md  constants.hpp  pass.cpp
sandbox/01-llvm-ir/llvm-pass/src/: argMapping.cpp  argMapping.hpp  constants.hpp  encoding.cpp  encoding.hpp  instrumentation.cpp  instrumentation.hpp  mapping.cpp  mapping.hpp  modMapping.cpp  modMapping.hpp  pass.cpp  typeAlias.hpp  typeids.h  utility.hpp  verbosity.cpp  verbosity.hpp
sandbox/01-llvm-ir/test-pass/: test-program.c  test-program.cpp
sandbox/01-llvm-ir/test-pass/hooklib/: CMakeLists.txt  hook.c  hook.cpp  hook.h
sandbox/01-llvm-ir/test-pass/working/: .gitignore  HOWTO.md  build-and-run-meta.sh  build-and-run.sh  export_lib_path.sh  ir-to-bin.sh  rebuild-meta-plugin.sh  rebuild-pass.sh  run-pass-with-meta-plugin.sh  run-pass.sh
sandbox/02-ipc/: README.md
sandbox/02-ipc/e2e-tests/: README.md  clean-all.sh  llcap-cleanup.sh  test.sh
sandbox/02-ipc/e2e-tests/test/: run-all-tests.sh
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-lambda-thisptr/: .gitignore  main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-large/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-simple/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-sret/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-sret-structarg/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-sret-this/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-sret-this-structarg/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-structret-simple/: main.cpp
sandbox/02-ipc/e2e-tests/testbin-arg-replacement-thisptr/: main.cpp
sandbox/02-ipc/example-arg-replacement/: .gitignore  README.md  build-arg-trace.sh  build-call-trace.sh  check-podman-demo.sh
sandbox/02-ipc/example-complex/: .gitignore  CMakeLists.txt  build-arg-trace.sh  build-call-trace.sh  build-noinstr.sh  build.sh  lib.cpp  lib.h  main.cpp
sandbox/02-ipc/ipc-finalizer/: CMakeLists.txt  README.md  build.sh  main.c
sandbox/02-ipc/ipc-hooklib/: .clang-tidy  CMakeLists.txt  README.md  hook.cpp  hook.h  ipc.c  ipc.h  llcap_state.c  llcap_state.h  shm.c  shm.h  shm_commons.h  shm_oneshot_rx.c  shm_oneshot_rx.h  shm_util.c  shm_util.h  shm_write_channel.c  shm_write_channel.h
sandbox/02-ipc/llcap-server/: Cargo.toml  README.md  build.rs
(+206 files in other folders)
